// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch 镜像测试 不可用状态 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxiKw iTtuAU sinoui-switch sinoui-switch--disabled"
  disabled={true}
>
  <span
    className="sc-AxirZ cmsVHW sinoui-switch__label"
=======
  className="Switch__Wrapper-m36o27-0 djhusw sinoui-switch sinoui-switch--disabled"
  disabled={true}
>
  <span
    className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 cyvRbu sinoui-switch__label"
>>>>>>> origin/bottomNavigation
    data-testid="switchLabel"
    disabled={true}
  >
    <input
      className="sinoui-switch__input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch2"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
<<<<<<< HEAD
    className="sc-AxjAm kAyGwU sinoui-switch__track"
=======
    className="SwitchTrack-sc-1s786x7-0 hXfEpE sinoui-switch__track"
>>>>>>> origin/bottomNavigation
    disabled={true}
  />
</span>
`;

exports[`Switch 镜像测试 渲染Switch 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxiKw dbAppQ sinoui-switch"
>
  <span
    className="sc-AxirZ DKhje sinoui-switch__label"
=======
  className="Switch__Wrapper-m36o27-0 jimTzk sinoui-switch"
>
  <span
    className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 gGAMdi sinoui-switch__label"
>>>>>>> origin/bottomNavigation
    color="primary"
    data-testid="switchLabel"
  >
    <input
      className="sinoui-switch__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch1"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
<<<<<<< HEAD
    className="sc-AxjAm cMNbLp sinoui-switch__track"
=======
    className="SwitchTrack-sc-1s786x7-0 jazQLR sinoui-switch__track"
>>>>>>> origin/bottomNavigation
    color="primary"
  />
</span>
`;

exports[`Switch 镜像测试 选中状态 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxiKw dbAppQ sinoui-switch sinoui-switch--checked"
>
  <span
    checked={true}
    className="sc-AxirZ iWTLdP sinoui-switch__label"
=======
  className="Switch__Wrapper-m36o27-0 jimTzk sinoui-switch sinoui-switch--checked"
>
  <span
    checked={true}
    className="SwitchLabel__SwitchLabelWrapper-sc-1o7u2zc-0 gZpuOZ sinoui-switch__label"
>>>>>>> origin/bottomNavigation
    color="info"
    data-testid="switchLabel"
  >
    <input
      checked={true}
      className="sinoui-switch__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
      value="switch2"
    />
    <span
      className="sinoui-switch__thumb"
    />
  </span>
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm glPcoh sinoui-switch__track"
=======
    className="SwitchTrack-sc-1s786x7-0 diCGGz sinoui-switch__track"
>>>>>>> origin/bottomNavigation
    color="info"
  />
</span>
`;
